--- a/Premier League Analysis.ipynb
+++ b/Premier League Analysis.ipynb
@@ -12,7 +12,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib as mpl\n",
-    "import requests"
+    "import requests\n",
+    "import config"
    ]
   },
   {
@@ -62,7 +63,7 @@
     "\n",
     "payload={}\n",
     "headers = {\n",
-    "  'x-rapidapi-key': '1ec7743c6ccfd595cead6227830b9678',\n",
+    "  'x-rapidapi-key': config.API_Key,\n",
     "  'x-rapidapi-host': 'v3.football.api-sports.io'\n",
     "}\n",
     "\n",
@@ -1510,7 +1511,7 @@
     "\n",
     "payload={}\n",
     "headers = {\n",
-    "  'x-rapidapi-key': '1ec7743c6ccfd595cead6227830b9678',\n",
+    "  'x-rapidapi-key': config.API_Key,\n",
     "  'x-rapidapi-host': 'v3.football.api-sports.io'\n",
     "}\n",
     "\n",
@@ -2403,7 +2404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -2417,7 +2418,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7ad6a494e52811d315032f077b15b9faa863b11f84f5bb5415741e8e88e5a186"
+   }
   }
  },
  "nbformat": 4,
